--- a/src/app/projects/componenets/project-form/project-form.component.scss
+++ b/src/app/projects/componenets/project-form/project-form.component.scss
@@ -55,6 +55,11 @@
         #button-basic,#dropdown-basic{
             min-width: 200px;
             max-width: 200px;
+            background-color: white;
+
+        }
+        .visibity-none{
+            visibility: hidden;
         }
 }
 
