--- a/src/app/tasks/componenets/tasks-list/tasks-list.component.html
+++ b/src/app/tasks/componenets/tasks-list/tasks-list.component.html
@@ -1,9 +1,10 @@
 <div class="d-flex justify-content-between align-items-center my-3 header">
     <strong>{{"Tasks" | translate}}</strong>
     <button mat-raised-button color="primary" class="w-30"
-    routerLink="/tasks/TaskForm" *ngIf="share.getBtnGuard('TasksList','Insert')">
+    *ngIf="share.getBtnGuard('TasksList','Insert')"
+    routerLink="/tasks/TaskForm" >
     <mat-icon>add_circle</mat-icon> 
     {{'AddNewTask' | translate}}
     </button>
 </div>
-<!-- <app-tasks-list-mat-table></app-tasks-list-mat-table> -->
+<app-tasks-list-mat-table></app-tasks-list-mat-table>
