--- a/src/app/projects/componenets/project-form/project-form.component.html
+++ b/src/app/projects/componenets/project-form/project-form.component.html
@@ -94,15 +94,15 @@
             
                               </div>
                      
-                              <div class="col-md-6 my-1">
+                              <!-- <div class="col-md-6 my-1">
                                   <label for="project">{{'Project' | translate}}</label>
                                   <select class="form-control" name="project" id="project" formControlName="project">
                                       <option value="" disabled selected hidden>{{'select' | translate}}</option>
                                       <option [value]="item.id" *ngFor="let item of projectsArr">{{item.name}}</option>
                                   </select>
                            
-                              </div>    
-                              <div class="col-md-6 my-1">
+                              </div>     -->
+                              <div class="col-md-9 my-1">
                                 <label for="assignedTo">{{'AssignedTo' | translate}}</label>
                                 <select class="form-control" name="assignedTo" id="assignedTo" formControlName="assignedTo">
                                     <option value="" disabled selected hidden>{{'select' | translate}}</option>
