--- a/src/app/projects/componenets/projects-list-mat-table/projects-list-mat-table.component.html
+++ b/src/app/projects/componenets/projects-list-mat-table/projects-list-mat-table.component.html
@@ -19,17 +19,35 @@
             </mat-panel-title>
             <mat-panel-title>
                 <button mat-raised-button color="primary" class="w-30 mx-2" 
-                (click)="editProject(project)" *ngIf="share.getBtnGuard('ProjectsList','Update')">
+                (click)="editProject(project)" >
+                <!-- *ngIf="share.getBtnGuard('ProjectsList','Update')" -->
                 <mat-icon>edit</mat-icon>
                  {{'Edit' | translate}}
                 </button>
                 <button mat-raised-button color="accent" class="w-30 " 
-                (click)="openDeleteDialog(project.id,'parent',null)" *ngIf="share.getBtnGuard('ProjectsList','Delete')">
+                (click)="openDeleteDialog(project.id)" >
+                <!-- *ngIf="share.getBtnGuard('ProjectsList','Delete')" -->
                     <mat-icon> cancel_presentation</mat-icon>
                     {{'Delete' | translate}}
                    </button>
             </mat-panel-title>
         </mat-expansion-panel-header>
+        <mat-expansion-panel hideToggle>
+          <mat-expansion-panel-header>
+            <mat-panel-title>
+              {{"TaskName" | translate}}
+            </mat-panel-title>
+            <mat-panel-title>
+              {{"startDate" | translate}}
+            </mat-panel-title>
+            <mat-panel-title>
+              {{"EndDate" | translate}}
+            </mat-panel-title>
+            <!-- <mat-panel-title>
+              {{"Actions" | translate}}
+            </mat-panel-title> -->
+          </mat-expansion-panel-header>
+        </mat-expansion-panel>
         <mat-expansion-panel hideToggle *ngFor="let task of project.tasks">
             <mat-expansion-panel-header>
               <mat-panel-title>
@@ -42,9 +60,15 @@
                   {{task.startDate}}
                 </span>
               </mat-panel-title>
-              <!-- <mat-panel-title>
-                   <mat-icon color="accent" (click)="openDeleteDialog(task.id,'task',project.id)" *ngIf="share.getBtnGuard('ProjectsList','Delete')" > cancel_presentation</mat-icon>
-            </mat-panel-title>  -->
+              <mat-panel-title>
+                <span class="badge badge-danger">
+                  {{task.endDate}}
+                </span>
+              </mat-panel-title>
+              <mat-panel-title>
+                <!-- *ngIf="share.getBtnGuard('ProjectsList','Delete')"  -->
+                   <mat-icon color="accent" (click)="openDeleteDialog(task.id)" > cancel_presentation</mat-icon>
+            </mat-panel-title> 
             </mat-expansion-panel-header>
           </mat-expansion-panel>
         
