--- a/src/app/projects/componenets/projects-list/projects-list.component.html
+++ b/src/app/projects/componenets/projects-list/projects-list.component.html
@@ -1,8 +1,8 @@
 <div class="d-flex justify-content-between align-items-center my-3 header">
     <strong>{{"Projects" | translate}}</strong>
     <button mat-raised-button color="primary" class="w-30"
-    *ngIf="share.getBtnGuard('ProjectsList','Insert')"
     routerLink="/tasks/TaskForm" >
+    <!-- *ngIf="share.getBtnGuard('ProjectsList','Insert')" -->
     <mat-icon>add_circle</mat-icon> 
     {{'AddNewProject' | translate}}
     </button>
