--- a/src/app/projects/componenets/projects-list/projects-list.component.html
+++ b/src/app/projects/componenets/projects-list/projects-list.component.html
@@ -1,7 +1,7 @@
 <div class="d-flex justify-content-between align-items-center my-3 header">
     <strong>{{"Projects" | translate}}</strong>
     <button mat-raised-button color="primary" class="w-30"
-    routerLink="/tasks/TaskForm" >
+    routerLink="/projects/ProjectForm" >
     <!-- *ngIf="share.getBtnGuard('ProjectsList','Insert')" -->
     <mat-icon>add_circle</mat-icon> 
     {{'AddNewProject' | translate}}
